# amazon-fraud-detector-python-sdk

./: .gitignore  README.md  pyproject.toml  pytest.ini  setup.py
docs/: MANUAL.md
example/: Fraud_Detector_End_to_End_Blog_Post.ipynb  frauddetector_native_example.ipynb  frauddetector_sdk_example.ipynb
frauddetector/: frauddetector.py  metrics.py  profiler.py
tests/: README.md  test_frauddetector.py  test_metrics.py  test_profiler.py
